Update github secret

--- a/helm/nginx-webserver/templates/secret.yaml
+++ b/helm/nginx-webserver/templates/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: argo-secret
   namespace: argocd
 data:
-  github-package: "SHVza3lJc0hlcmU6Z2hwX0VrU005QlY3QWZ0YXFzMlhtRTA3NUE5YzR4dFFnQjJnSGtQQw=="
+  github-package: "HuskyIsHere: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"
