--- a/helm/nginx-webserver/templates/secret.yaml
+++ b/helm/nginx-webserver/templates/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: argo-secret
   namespace: argocd
 data:
-  github-package: "HuskyIsHere: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"
+  github-package: "aHVza3lpc2hlcmU6Z2hwX3FEbmhjUTFHaldIZU9ncmhKWnJUNnpCWmtnN2NmODJwUTZNMQ=="
