--- a/helm/nginx-webserver/templates/secret.yaml
+++ b/helm/nginx-webserver/templates/secret.yaml
@@ -5,3 +5,11 @@ metadata:
   namespace: argocd
 data:
   github-package: "aHVza3lpc2hlcmU6Z2hwX3FEbmhjUTFHaldIZU9ncmhKWnJUNnpCWmtnN2NmODJwUTZNMQ=="
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: github-secret
+data:
+  .dockerconfigjson: "ewogICJhdXRocyI6IHsKICAgICJnaGNyLmlvIjogewogICAgICAidXNlcm5hbWUiOiAiSHVza3lJc0hlcmUiLAogICAgICAicGFzc3dvcmQiOiAiZ2hwX3FEbmhjUTFHaldIZU9ncmhKWnJUNnpCWmtnN2NmODJwUTZNMSIsCiAgICAgICJlbWFpbCI6ICJsYWthZ3VsLnBlZW1AZ21haWwuY29tIgogICAgfQogIH0KfQ=="
+type: kubernetes.io/dockerconfigjson
