--- a/helm/nginx-webserver/values.yaml
+++ b/helm/nginx-webserver/values.yaml
@@ -2,3 +2,6 @@ image:
   repository: ghcr.io/huskyishere/nginx-webserver
   pullPolicy: Always
   tag: latest
+
+imagePullSecrets: 
+  - name: github-packages
