--- a/helm/nginx-webserver/templates/StatefulSet.yaml
+++ b/helm/nginx-webserver/templates/StatefulSet.yaml
@@ -17,7 +17,7 @@ spec:
         - name: github-secret
       containers:
         - name: nginx
-          image: ghcr.io/huskyishere/nginx-webserver:latest  # Replace with your image
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: 80
           volumeMounts:
