--- a/helm/nginx-webserver/templates/StatefulSet.yaml
+++ b/helm/nginx-webserver/templates/StatefulSet.yaml
@@ -17,7 +17,7 @@ spec:
         - name: github-secret
       containers:
         - name: nginx
-          image: "{{ .Values.nginx-webserver.image-name }}:{{ .Values.nginx-webserver.image-tag }}"
+          image: "{{ .Values.nginx-webserver.repository}}:{{ .Values.nginx-webserver.image-tag }}"
           ports:
             - containerPort: 80
           volumeMounts:
