--- a/helm/nginx-webserver/templates/deployment.yaml
+++ b/helm/nginx-webserver/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: github-secret
       containers:
         - name: nginx2
-          image: "{{ .Values.nginx-webserver2.repository }}:{{ .Values.nginx-webserver2.image-tag }}"
+          image: "{{ .Values.argocd-image-updater.nginx-webserver2.helm.repo-url }}:{{ .Values.argocd-image-updater.nginx-webserver2.helm.image-tag }}"
           ports:
             - containerPort: 82
           volumeMounts:
