--- a/helm/nginx-webserver/values.yaml
+++ b/helm/nginx-webserver/values.yaml
@@ -1,22 +1,41 @@
-nginx-webserver:
-  repository: ghcr.io/huskyishere/nginx-webserver
-  image-name: nginx-webserver
-  image-tag: latest
-  argocd-image-updater:
-    image-name: nginx-webserver
-    image-tag: latest
-    update-strategy: semver
-    repo-url: https://github.com/HuskyIsHere/nginx-webserver.git
+# values.yaml
 
-nginx-webserver2:
-  repository: ghcr.io/huskyishere/nginx-webserver2
-  image-name: nginx-webserver2
-  image-tag: latest
-  argocd-image-updater:
-    image-name: nginx-webserver2
-    image-tag: latest
-    update-strategy: semver
-    repo-url: https://github.com/HuskyIsHere/nginx-webserver2.git
+argocd-image-updater:
+  image-list:  |
+    nginx-webserver=ghcr.io/huskyishere/nginx-webserver:latest,
+    nginx-webserver2=ghcr.io/huskyishere/nginx-webserver2:latest
+  nginx-webserver:
+    helm:
+      image-name: nginx-webserver
+      image-tag: latest
+      repo-url: ghcr.io/huskyishere/nginx-webserver  
+  nginx-webserver2:
+    helm:
+      image-name: nginx-webserver2
+      image-tag: latest
+      repo-url: ghcr.io/huskyishere/nginx-webserver2
+
+
+
+# nginx-webserver:
+#   repository: ghcr.io/huskyishere/nginx-webserver
+#   image-name: nginx-webserver
+#   image-tag: latest
+#   argocd-image-updater:
+#     image-name: nginx-webserver
+#     image-tag: latest
+#     update-strategy: semver
+#     repo-url: https://github.com/HuskyIsHere/nginx-webserver.git
+
+# nginx-webserver2:
+#   repository: ghcr.io/huskyishere/nginx-webserver2
+#   image-name: nginx-webserver2
+#   image-tag: latest
+#   argocd-image-updater:
+#     image-name: nginx-webserver2
+#     image-tag: latest
+#     update-strategy: semver
+#     repo-url: https://github.com/HuskyIsHere/nginx-webserver2.git
 
 imagePullSecrets: 
   - name: github-packages
