--- a/helm/nginx-webserver/templates/StatefulSet.yaml
+++ b/helm/nginx-webserver/templates/StatefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: nginx
           # image: "{{ .Values.statefulset.image.repository }}:{{ .Values.image.tag }}"
-          image: "{{ .Values.nginx-webserver2.image }}:{{ .Values.nginx-webserver2.tag }}"
+          image: "{{ .Values.nginx-webserver.image }}:{{ .Values.nginx-webserver.tag }}"
           ports:
             - containerPort: 80
           volumeMounts:
