--- a/helm/nginx-webserver/templates/deployment.yaml
+++ b/helm/nginx-webserver/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: nginx2
           # image: "{{ .Values.deployment.image.repository }}:{{ .Values.image.tag }}"
-          image: "{{ .Values.nginx-webserver.image }}:{{ .Values.nginx-webserver.tag }}"
+          image: "{{ .Values.nginx-webserver2.image }}:{{ .Values.nginx-webserver2.tag }}"
           ports:
             - containerPort: 82
           volumeMounts:
